# bulk_product

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c8004ce180d_add_size_classification_to_pokemon_table.py  5759ea1ac55e_add_species_and_pokemon_tables.py  741c87258a2d_add_height_weight_catch_date_to_pokemon.py  f82613162d8f_add_lucky_best_buddy_shiny_and_gender_.py  f885fef8989c_add_form_column_to_species_table.py
backend/app/: main.py
backend/app/api/v1/: pokemon.py  router.py  species.py
backend/app/core/: analysis.py  config.py  database.py  leagues.py  stats.py
backend/app/data/: cpm.json
backend/app/models/: __init__.py  pokemon.py  pokemon_type.py  species.py
backend/app/schemas/: pokemon.py  species.py
backend/app/services/: pokemon.py  species.py
backend/scripts/: seed_species.py
backend/tests/: test_analysis.py  test_stats.py
